修改weigetInfo,删除测试

--- a/src/main/resources/META-INF/widget.properties
+++ b/src/main/resources/META-INF/widget.properties
@@ -7,4 +7,4 @@
 # 2013-2016. All rights reserved.
 #
 
-widgetClasses=com.huotu.wedget.picBanner.WidgetInfo
+widgetClasses=com.huotu.hotcms.widget.picCarousel.WidgetInfo
