--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>com.huotu.hotcms</groupId>
+            <artifactId>widget-test</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
